welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: identifier expected but '=' found.
	var lettre: = litMessage()
                    ^